--- a/submission-full.tex
+++ b/submission-full.tex
@@ -76,7 +76,7 @@
 
 %=================================================================
 % Full title of the paper (Capitalized)
-\Title{Topos Theory And Mereology}
+\Title{Sheaf Mereology}
 
 % MDPI internal command: Title for citation in the left column
 \TitleCitation{Title}
